# QR-Database

./: .gitmodules  CMakeLists.txt  Makefile  README.md  md5.txt  qr.cpp
